fix: update deployed URL to the latest one

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="card-body">
           <h5 class="card-title">iroiromap</h5>
           <p class="card-text">住所周辺施設が確認できる地図アプリ</p>
-          <button onclick="window.open('https://68918a7d80667d69b769f1b0--iroiromap.netlify.app/')" type="button" class="btn btn-secondary px-2 py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="使ってみる">
+          <button onclick="window.open('https://iroiromap.netlify.app/')" type="button" class="btn btn-secondary px-2 py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="使ってみる">
             Link
           </button>
           <a href="https://github.com/JohnRRRx/iroiromap" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Readmeを見る">
